# OOP_Project_job_opening_search

./: main.py  pyproject.toml  readme.md
src/: connector_class.py  job_openings_class.py  mixin_value_inspector.py  opening_originate_class.py  run.py  saver_class.py
tests/: conftest.py  test_connector.py  test_job_opening_class.py  test_mixin_inspector.py  test_opening_originate.py  test_saver_class.py
